init: add pybuild-plugin-pyproject to Build-Depends
Add pybuild-plugin-pyproject to debian/control Build-Depends for
proper pyproject.toml-based builds with pybuild.

Signed-off-by: Anders Roxell <anders.roxell@linaro.org>

--- a/tuxpkg/data/init/debian/control.jinja2
+++ b/tuxpkg/data/init/debian/control.jinja2
@@ -7,6 +7,7 @@ Build-Depends: bash-completion,
                dh-python,
                flit,
                git,
+               pybuild-plugin-pyproject,
                python3-all,
                python3-pytest,
                python3-pytest-cov,
