github-actions: add Arch Linux package building
Signed-off-by: Anders Roxell <anders.roxell@linaro.org>

--- a/tuxpkg/data/init/.github/workflows/ci.yml.jinja2
+++ b/tuxpkg/data/init/.github/workflows/ci.yml.jinja2
@@ -47,13 +47,32 @@ jobs:
           docker build -t {% raw %}${{ env.REGISTRY }}/${{ github.repository }}{% endraw %}:ci-fedora -f Dockerfile.ci-fedora .
           docker push {% raw %}${{ env.REGISTRY }}/${{ github.repository }}{% endraw %}:ci-fedora
 
+  ci-image-archlinux:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Log in to Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: {% raw %}${{ env.REGISTRY }}{% endraw %}
+          username: {% raw %}${{ github.actor }}{% endraw %}
+          password: {% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}
+      - name: Build and push Arch Linux image
+        run: |
+          docker build -t {% raw %}${{ env.REGISTRY }}/${{ github.repository }}{% endraw %}:ci-archlinux -f Dockerfile.ci-archlinux .
+          docker push {% raw %}${{ env.REGISTRY }}/${{ github.repository }}{% endraw %}:ci-archlinux
+
   tuxpkg:
-    needs: [ci-image-debian, ci-image-fedora]
+    needs: [ci-image-debian, ci-image-fedora, ci-image-archlinux]
     uses: Linaro/tuxpkg/.github/workflows/tuxpkg.yml@main
     with:
       tuxpkg_project: {{ project }}
       ci_image_debian: {% raw %}ghcr.io/${{ github.repository }}:ci-debian{% endraw %}
       ci_image_fedora: {% raw %}ghcr.io/${{ github.repository }}:ci-fedora{% endraw %}
+      ci_image_archlinux: {% raw %}ghcr.io/${{ github.repository }}:ci-archlinux{% endraw %}
     secrets: inherit
 
   pages:
